--- a/src/app/pages/Chat/style.scss
+++ b/src/app/pages/Chat/style.scss
@@ -187,6 +187,7 @@
         transition: opacity 0.1s, transform 0.2s;
         transform: scale(0);
         transform-origin: center 100%;
+        z-index: 20;
         &.visible {
           opacity: 1;
           transform: scale(1);
